feat: JDK 25 / Spring Boot 4 신기능 적용 (getFirst, JSpecify)
- List.getFirst() 로 교체 (Sequenced Collections, JDK 21)
- JSpecify @NullMarked(패키지) + @Nullable 로 예매 실패(null) 계약 명시
  (Spring Framework 7 채택) — 선점 패배/매진/락 타임아웃 반환부에 적용
- build.gradle.kts: org.jspecify:jspecify 의존성 추가 (버전은 Boot BOM 관리)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>