@@ -1,6 +1,7 @@
 package com.ktx.ticketing.booking;
 
 import com.ktx.ticketing.domain.*;
+import org.jspecify.annotations.Nullable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -27,7 +28,7 @@ public class BookingTransactionHelper {
     }
 
     @Transactional
-    public Reservation holdSeat(Long userId, Long seatInventoryId) {
+    public @Nullable Reservation holdSeat(Long userId, Long seatInventoryId) {
         SeatInventory inventory = seatInventoryRepository.findById(seatInventoryId)
                 .orElseThrow(() -> new IllegalStateException("SeatInventory not found: " + seatInventoryId));
 
@@ -43,14 +44,14 @@ public class BookingTransactionHelper {
     }
 
     @Transactional
-    public Reservation holdAnySeat(Long userId, Long scheduleId) {
+    public @Nullable Reservation holdAnySeat(Long userId, Long scheduleId) {
         List<SeatInventory> available = seatInventoryRepository.findAvailableByScheduleId(scheduleId);
         if (available.isEmpty()) {
             return null;
         }
 
         User user = userRepository.getReferenceById(userId);
-        SeatInventory inventory = available.get(0);
+        SeatInventory inventory = available.getFirst();
         inventory.hold(LocalDateTime.now().plusMinutes(BookingService.HELD_TTL_MINUTES));
         Reservation reservation = Reservation.hold(user, inventory, BookingService.HELD_TTL_MINUTES);
         reservationRepository.save(reservation);
